--- a/css/style.css
+++ b/css/style.css
@@ -1,19 +1,19 @@
 body {
-  margin: 0 auto;
-  padding: 0;
   font-weight: normal;
   font-size: 12px;
   line-height: 15px;
   font-family:"Montserrat", Arial, sans-serif;
   color: #000000;
+  margin: 0 auto;
+  padding: 0;
 }
 
 .container {
+  max-width: 480px;
   margin-top: 32px;
   padding-left: 15px;
   padding-right: 15px;
   margin: 0 auto;
-  max-width: 480px;
   box-sizing: border-box;
 }
 
@@ -37,7 +37,6 @@ body {
   background-image: url("../img/smile.svg");
   background-repeat: no-repeat;
 }
-
 
 .step.step--phone::before {
   background-image: url("../img/phone.svg");
@@ -71,9 +70,13 @@ body {
 
 @media (min-width: 768px) {
   .container {
-    position: relative;
     max-width: 768px;
-    margin-top: 72px;
+    position: relative;
+    margin-top: 72px; 
+    margin-bottom: 150px;
+  }
+
+  .step__list {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
@@ -87,7 +90,6 @@ body {
    top: 0;
    bottom: -80px;
   }
-
 
   .step {
     max-width: 42%;
